syntax = "proto3";

option go_package = "./medium/pb";

message ReqBeat { 
    string ref_id = 1;
    string bind = 2;
    int32 my_id = 3; 
    int32 priority = 4; 
}

message ResBeat { 
    string ref_id = 1;  
    bool ok = 2; 
}