syntax = "proto3";

option go_package = "./medium/pb";

enum Enum {
    STOP = 0;
    START = 1;
}

message ReqAppService { 
    string ref_id = 1; 
    string name = 2;
    Enum action = 3;
}

message ResAppService { 
    string ref_id = 1; 
    string name = 2;
    bool ok = 3; 
}
